# VkRay

./: CMakeLists.txt  README.md
include/VkRay/: AccelStruct.h  Buffer.h  Descriptors.h  SBT.h  VkRay.h  VkRay_device.h
include/VkRay/Denoisers/: DenoiserInterface.h  GaussianBlurDenoiser.h
include/VkRay/VulkanBuilder/: VulkanBuilder.h
include/VkRay/builders/: builders.h
src/: AccelStruct.cpp  Buffer.cpp  Descriptors.cpp  RayTracingPipeline.cpp  SBT.cpp  Shader.cpp  VkRay.cpp  VkRay_device.cpp  macros.h  pch.h  utils.h
src/Denoisers/: DenoiserInterface.cpp  GaussianBlurDenoiser.cpp
src/VulkanBuilder/: VulkanBuilder.cpp
src/builders/: builders.cpp
